# softvms-mc

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
src/: amiga_main.c  amiga_mainwin.c  cpu.c  dc_main.c  dc_mainwin.c  dos_main.c  dos_mainwin.c  getopt.c  lcdimg.c  main.c  mainwin.c  nsplugin.c  prototypes.h  version.h
